<resources>
    <string name="app_name">SholatSunnah</string>
    <string name="tahajjud">Tahajjud</string>
    <string name="syuruq">Syuruq</string>
    <string name="tahiyyatul_masjid">Tahiyyatul Masjid</string>
    <string name="istikhoroh">Istikhoroh</string>
    <string name="dhuha">Dhuha</string>
    <string name="rawatib">Rawatib</string>
    <string name="witir">Witir</string>
</resources>
