<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
    android:id="@+id/tahajjud"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tahajjud"
    android:textSize="20sp"/>
    <TextView
        android:id="@+id/witir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/witir"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/rawatib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rawatib"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/dhuha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dhuha"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/istkhoroh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/istikhoroh"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tahiyyatulmasjid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tahiyyatul_masjid"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/syuruq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syuruq"
        android:textSize="20sp"/>

</LinearLayout>